--- a/accounts/templates/doc/register.html
+++ b/accounts/templates/doc/register.html
@@ -54,7 +54,7 @@
                         </div>
                     </div>
                     <div class="mt-5 text-center text-white-50">
-                        <p>Already have an account ? <a href="{% url 'accounts:doctor_login' %}" class="font-500 text-white"> Login </a> </p>
+                        <p>Already have an account ? <a href="{% url 'accounts:doctor-login' %}" class="font-500 text-white"> Login </a> </p>
                         <p>© 2019 Veltrix. Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</p>
                     </div>
 
