--- a/accounts/templates/doc/login.html
+++ b/accounts/templates/doc/login.html
@@ -32,7 +32,7 @@
                             <div class="p-3">
                                 <h4 class="font-18 text-center">Welcome Back Doctor!</h4>
                                 <p class="text-muted text-center mb-4">Sign in to view patients details.</p>
-                                <form class="form-horizontal" action="{% url 'accounts:doctor_login' %}" 
+                                <form class="form-horizontal" action="{% url 'accounts:doctor-login' %}" 
                                     method="post">
                                     {% csrf_token %}
                                     <div class="form-group">
