--- a/patients/templates/base.html
+++ b/patients/templates/base.html
@@ -1,74 +1,6 @@
 {% load static %}
 
-<!-- commented out -->
-{% comment %} {% load static %}
-<!DOCTYPE html>
 
-<html lang="en" dir="ltr">
-
-<head>
-    <meta charset="utf-8">
-    <title>Home Dashboard</title>
-
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous">
-    <link rel="stylesheet" href="{% static 'patients/css/sidebar.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> {% block head %} {% endblock %}
-
-</head>
-
-<body>
-    <div class="wrapper">
-        <nav id="sidebar">
-            <div class="sidebar-header">
-                <h3>HealthApi</h3>
-            </div>
-
-            <div class="sidebar-divider-light"></div>
-
-            <ul class="list-unstyled componenets">
-                <li id="home-link">
-                    <a href="{% url 'index' %}">
-                        <i class="fas fa-home"></i> Home
-                    </a>
-                </li>
-                <li>
-                    <a href="#pageSubmenu" data-toggle="collapse" aria-expanded="false" class="dropdown-toggle">
-                        <i class="fas fa-chart-line"></i> Check Patient Stats
-                    </a>
-                    <ul class="collapse list-unstyled" id="pageSubmenu">
-                        <li id="temp_link">
-                            <a href="{% url 'pulse_chart' 'tee'%}">Pulse</a>
-                        </li>
-                    </ul>
-                </li>
-            </ul>
-
-            <div class="sidebar-divider-dark"></div>
-
-
-        </nav>
-
-        <div class="hamburgerMenuContainer" id="hamburgerMenuContainer">
-            <i class="fas fa-bars"></i>
-        </div>
-
-        <div id="content">
-
-            {% block content %} {% endblock %}
-
-        </div>
-        <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script>
-        <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-        <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script>
-        <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script>
-
-        {% block jquery %} {% endblock %}
-
-</body>
-
-</html>
-
-{% endcomment %}
 
 <!DOCTYPE html>
 <html lang="en">
@@ -97,7 +29,9 @@
 
     <!-- <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/css/bootstrap.min.css" integrity="sha384-MCw98/SFnGE8fJT3GXwEOngsV7Zt27NXFoaoApmYm81iuXoPkFOJwJ8ERdknLPMO" crossorigin="anonymous"> -->
     <link rel="stylesheet" href="{% static 'patients/css/sidebar.css' %}">
-    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> {% block head %} {% endblock %}
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous"> 
+
+    {% block head %} {% endblock %}
 
 </head>
 
@@ -172,8 +106,6 @@
             </div>
             <!-- content -->
 
-
-
         </div>
         <div id="content">
             <div>
@@ -204,11 +136,6 @@
     <!-- App js -->
     <script src="{% static 'assets/js/app.js' %}"></script>
 
-    <!-- for chart -->
-    <!-- <script src="https://code.jquery.com/jquery-3.3.1.js" integrity="sha256-2Kok7MbOyxpgUVvAk/HJ2jigOSYS2auK4Pfzbm7uH60=" crossorigin="anonymous"></script> -->
-    <!--<script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>-->
-    <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.3/umd/popper.min.js" integrity="sha384-ZMP7rVo3mIykV+2+9J3UJ46jBk0WLaUAdn689aCwoqbBJiSnjAK/l8WvCWPIPm49" crossorigin="anonymous"></script> -->
-    <!-- <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.1.3/js/bootstrap.min.js" integrity="sha384-ChfqqxuZUCnJSK3+MXmPNIyE6ZbWh2IMqE241rYiqJxyMiZ6OW/JmZQ5stwEULTy" crossorigin="anonymous"></script> -->
 
     {% block jquery %} {% endblock %}
 
