--- a/doctors/templates/doctor/home.html
+++ b/doctors/templates/doctor/home.html
@@ -48,9 +48,11 @@
 
                         </div>
                         <div class="col">
+                            <a href="{% url 'temp_chart' patient.device_serial %}">
                             <button type="button" class="btn btn-warning btn-icon">
                                 <span class="btn-icon-label"><i class="mdi mdi-alert-outline mr-2"></i></span> Warning
                             </button>
+                            </a>
                         </div>
                     </div>
                 </div>
