base template changes

--- a/patients/templates/base.html
+++ b/patients/templates/base.html
@@ -114,7 +114,7 @@
 
         </div>
         <footer class="footer">
-            © 2019 Veltrix <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Themesbrand</span>.
+            © 2019 Veltrix <span class="d-none d-sm-inline-block"> - Crafted with <i class="mdi mdi-heart text-danger"></i> by Biggietronics💻</span>.
         </footer>
         <!-- ============================================================== -->
         <!-- End Right content here -->
